# inkpdf

./: .gitignore  Cargo.toml  LICENSE  README.md  cargo-sources.json  de.nikolas.inkpdf.json
data/: de.nikolas.inkpdf.desktop  de.nikolas.inkpdf.metainfo.xml
graphify-out/: GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
src/: lib.rs  main.rs
src/engine/: autosave.rs  document.rs  mod.rs  pdf.rs  pdf_worker.rs  sandbox.rs  storage.rs  worker_protocol.rs
src/ui/: canvas.rs  file_browser.rs  mod.rs  settings.rs  window.rs
