[package]
name = "inkpdf"
version = "0.1.0"
edition = "2024"

[dependencies]
adw = { version = "0.9.2", package = "libadwaita", features = ["v1_5"] }
anyhow = "1.0.103"
flate2 = "1.1.9"
gtk = { version = "0.11.4", package = "gtk4", features = ["v4_12"] }
ink-stroke-modeler-rs = "0.1.0"
poppler-rs = { version = "0.26.0", features = ["v0_82"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
thiserror = "2.0.18"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
